feat: Added Swagger UI for AddLabel APIs And Some code change
